Added Premissions to .ENV

--- a/example.env
+++ b/example.env
@@ -14,3 +14,4 @@ SHARD_DB_NAME=SRO_VT_SHARD
 NOTIFICATION_POLLING_INTERVAL=5000
 PLAYER_COUNT_POLLING_INTERVAL=30000000
 GUILD_IDS=
+AUTHORIZED_USERS=
